 + re-included faster right-tail approximation in C-code K(int n, double d)  
   included from R-Core (was commented out there) [ks.c in folder src in
   tar-ball, ll 153-155]
-plot: 
 + fixed some issues with plotting of distributions: xlim, ylim were not 
   correctly passed on, same for col => now use dots.lowlevel ... 
-helper function .isReplicated gains an optional argument tol
   
##############
v 2.5.3
##############

user-visible CHANGES:
+ CITATION file updated after JSS publication

under the hood:
+ tests: long-running tests with large pre-calculated results successfully implemented
+ enhanced utility function .fillList by an automatic cast to list if the argument 
  not yet is of class list.
+ some minor changes in qqplot 

bug fixes:
+ bug in LatticeDistribution found by Mikhail.Spivakov@babraham.ac.uk 
+ found a missing drop=FALSE in .mergegaps2
+ fixed an issue with casting AffLinDiscreteDistributions to LatticeDistributions 
 (discovered by Kostas Oikonomou, ko@research.att.com )

 ##############
v 2.5
##############

user-visible CHANGES:

GENERAL ENHANCEMENTS:
+ cleaned DESCRIPTION and NAMESPACE file as to Imports/Depends

under the hood:
+ added .Rbuildignore
+ exported some routines which had been internal so far to
  avoid calls by :::
+ in order to avoid calls to non-exported C-Code from pkg stats
  (for Kolmogorov-distribution) we integrated R-Core's C-code from  
            /src/library/stats/src/ks.c rev60573
   (with small changes to make it self-contained) to src folder of this pkg;
    in addition, we now use the shakier .C - interface again...
	in v 2.5.1 reverted the changes in /src/library/stats/src/ks.c:
	including R.h etc is easier than thought...
	
BUGFIXES:
+ fixed .makedotsPt -issue discovered by Gerald --> thx
+ moved generics to "distribution" and "samplesize" to pkg distr to avoid 
   conflict between pkgs distrMod and distrSim
   v 2.5.1: same with "samplesize<-"  to avoid conflict between pkgs 
   distrSim and RobAStBase
