@@ -22,7 +22,6 @@ user-visible CHANGES:
 + pattern substitution can now be switched on and off in all plot 
   functions according to argument withSubst
   
-  
 under the hood:
 
 -qqplot: 
@@ -51,6 +50,11 @@ under the hood:
    correctly passed on, same for col => now use dots.lowlevel ... 
 -helper function .isReplicated gains an optional argument tol
    
+- bug fixes:
+  + fixed a bug in plot (q) for LebDec-Distributions (verticals were not plotted correctly)
+  + panel selection mechanism had a bug for LebDec-Distributions 
+  
+ 
 ##############
 v 2.5.3
 ##############
